# synapse-engine

./: .env.cgrag.example  .env.example  .gitignore  ACTIVE_MODERATOR_IMPLEMENTATION.md  ADMINPAGE_ASCII_FIXES.md  ADMIN_PAGE_ASCII_ENHANCEMENTS.md  ASCII_CHARTS_IMPLEMENTATION.md  ASCII_FRAME_RESPONSIVE_IMPLEMENTATION.md  ASCII_LIBRARIES_RESEARCH.md  ASCII_MASTER_GUIDE.md  BACKEND_NAMING_MIGRATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_LINKING_PLAN.md  INSTANCE_PRESET_TEST_REPORT.md  LICENSE  MIGRATION_TEST_ANALYSIS.md  MOCKUPS_QUICK_REFERENCE.md  MODELSETTINGS_TERMINAL_TRANSFORMATION.md  MODEL_MANAGEMENT_UI_ENHANCEMENT.md  OFFLINE_STATE_IMPLEMENTATION.md  PHASE3_MODELSPARKLINE_IMPLEMENTATION.md  PHASE3_MODEL_MANAGEMENT_REWORK.md  PHASE_3_7_SUMMARY.md  PRESET_SYSTEM_IMPROVEMENTS.md  PRESET_TESTING_GUIDE.md  PROJECT_OVERVIEW.md  QUERY_ROUTER_BUG_VALIDATION.md  README.md  RESOURCE_PANEL_DELIVERY.md  SESSION_NOTES.md  SYNAPSE_ASCII_UI_IMPLEMENTATION_PLAN.md  UI_CONSOLIDATION_PLAN.md  docker-compose.monitoring.yml  docker-compose.yml  package-lock.json  test_shell_security.py
backend/: .env.example  API_ARCHITECTURE.md  API_QUICK_REFERENCE.md  CODE_CHAT_TEST_REPORT.md  Dockerfile  METRICS_API_INTEGRATION_GUIDE.md  PHASE1_COMPLETE.md  PHASE6_TESTING_CHECKLIST.md  QUICKSTART_PHASE6.md  QUICK_START.md  README.md  README_PHASE1.md  WEBSOCKET_EVENTS_INTEGRATION_GUIDE.md  pyproject.toml  requirements 2.txt  requirements.txt  start.sh  test_event_system.py  verify.sh
backend/app/: __init__.py  main 2.py  main.py
backend/data/: instance_registry.json  model_registry.json  model_registry.json.backup  runtime_settings.json
backend/docs/: phase4_architecture.md  phase4_server_manager.md
backend/tests/: conftest.py  test_active_moderator.py  test_api_endpoints.py  test_api_models.py  (+39 more)
(+720 files in other folders)
